Fix double border on form with >1 hidden input

--- a/src/main/resources/static/less/components/dialog.less
+++ b/src/main/resources/static/less/components/dialog.less
@@ -35,7 +35,7 @@
 			}
 		}
 
-		>:not(:first-child) + .buttons {
+		>:not([type="hidden"]) ~ .buttons {
 			border-top: 1px solid #aaa;
 		}
 	}
